# TheWholeElephant

./: .gitignore  .pdm.toml  README.md  conftest.py  main.py  pyproject.toml
NLP Analytics and Topic Modeling /: Path to Nisarg Repo
backend/: .gitignore  .pdm-python  README.md  main.py  pyproject.toml  server.py
backend/elephant_news/: root.py
backend/elephant_news/analysis/: claims.py  snippets.py  sources.py  viewpoints.py
backend/elephant_news/collection/: core.py
backend/elephant_news/collection/news_sites/: cnn.py  fallback.py  fox_news.py
backend/elephant_news/llm/: llm.py
backend/elephant_news/reddit/: api.py
backend/elephant_news/tests/analysis/: test_claims.py  test_snippets.py  test_sources.py  test_viewpoints.py
backend/elephant_news/tests/collection/news_sites/: test_cnn.py  test_fallback.py  test_fox_news.py
backend/elephant_news/tests/data/articles/: 2023_05_17_nyt_record_heat_forecast.json
backend/elephant_news/tests/data/html/: 2023_07_05_fox_prigozhin.html  2023_07_06_cnn_financially_secure.html
backend/elephant_news/tests/llm/: test_llm.py
backend/elephant_news/tests/reddit/: test_api.py  test_end_to_end.py  test_reddit_claim_check.py
backend/elephant_news/tests/utils/: test_datetime.py  test_text_parsing.py
backend/elephant_news/utils/: datetime.py  health_check.py  text_parsing.py
browser/: manifest.json  readme.html  run_tests.sh
browser/background/: is_news_article.js  service-worker.js
browser/frontend/: index.html
browser/plugin/: manifest.json
browser/side_panel/: analysis_panel.html  analysis_panel.js  manual_panel.html
browser/tab/: content-script.js
browser/tests/: test_is_news_article.js  tests.html  tests.js
elephant_news/: autocomplete.py  color_scheme.py  llm.py  log.py  menu.py
elephant_news/analysis/: bias.py  claims.py  coverage.py  logic.py  questions.py  sources.py  tone.py  viewpoints.py
elephant_news/articles/: 2023_05_17_nyt_record-heat-forecast.json  2023_05_17_nyt_record_heat_forecast.json  2023_05_19_washingtonpost_debt_ceiling_talks_pause.json
elephant_news/backend/: README.md  conftest.py  pyproject.toml
elephant_news/browser/: server.py  web.py
elephant_news/cli/: log.py
elephant_news/collection/: congress.py  core.py  newsapi.py
elephant_news/core/: color_scheme.py  llm.py  log.py  menu.py  web.py
elephant_news/fe2/: background.js  manifest.json  popup.html  popup.js
elephant_news/llm/: llm.py  log.py  log_fn.py
elephant_news/reddit/: api.py  test_api.py
tests/llm/: test_log.py
(+53 files in other folders)
