[tool.pdm]

[project]
name = "elephant_news"
version = "0.1.0"
description = "Non-biased AI-summarized news from primary sources."
authors = [
    {name = "Matt Zhang", email = "set.stun@gmail.com"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"
