
[project]
name = "elephant_news"
version = "0.1.0"
description = "See every part of the story"
authors = [
    {name = "Matt Zhang", email = "set.stun@gmail.com"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

